log
Fri Mar 27 05:44:24 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
9312a44
Fri Mar 27 05:55:08 PM UTC 2026: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:86:9: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   86 |     list->size++;
      |         ^~
278e22c
Fri Mar 27 05:55:48 PM UTC 2026: 
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:86:9: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   86 |     list->size++;
      |         ^~
ce26fb9
